# kotoba

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md  rustfmt.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  deck_contribution.yml  feature_request.yml  integration_proposal.yml
.github/workflows/: ci.yml  release.yml
crates/kotoba-cli/: Cargo.toml
crates/kotoba-cli/src/: config.rs  dictionary_demo.rs  main.rs  store_fs.rs
crates/kotoba-cli/src/commands/: add.rs  decks.rs  init.rs  lookup.rs  mod.rs  today.rs
crates/kotoba-core/: Cargo.toml
crates/kotoba-core/src/: card.rs  deck.rs  dictionary.rs  engine.rs  error.rs  lib.rs  scheduler.rs  store.rs
crates/kotoba-daemon/: Cargo.toml
crates/kotoba-daemon/src/: lib.rs
crates/kotoba-mcp/: Cargo.toml
crates/kotoba-mcp/src/: lib.rs
decks/: README.md
decks/business-en-ja/: README.md
decks/jlpt-n4/: README.md
decks/jlpt-n5/: README.md
decks/starter/: welcome.md
docs/: README.md  ai-integration.md  architecture.md  data-format.md  faq.md  governance.md  i18n.md  launch-issues.md  launch-plan.md  licenses.md  plugin-api.md  roadmap.md  srs-algorithm.md  use-cases.md
examples/: deck.md
scripts/: install.sh
shells/: README.md
shells/bash/: kotoba.bash
shells/fish/: kotoba.fish
shells/nushell/: kotoba.nu
shells/zsh/: kotoba.zsh
