[package]
name = "kotoba-cli"
description = "The `kotoba` command-line tool: lookup, add, review, and study, all from your terminal."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "kotoba"

[[bin]]
name = "kotoba"
path = "src/main.rs"

[dependencies]
kotoba-core = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
